discussion/kv_engine/129638/129638_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge branch mad-hatter

* mad-hatter:
  MB-37374: Producer removes user-xattrs from Delete

Change-Id: I4288a945d95abaabc116da1c6847a533cb870241

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-06-03 18:12:29.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-03 18:24:32.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2542/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/item.cc:479:66: error: no viable conversion from "cb::char_buffer" (aka "sized_buffer<char>") to "std::string_view" (aka "basic_string_view<char>") [clang-diagnostic-error]
    const auto bodySize = valNBytes - cb::xattr::get_body_offset(valBuf);
                                                                 ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/string_view:97:17: note: candidate constructor not viable: no known conversion from "cb::char_buffer" (aka "sized_buffer<char>") to "const std::basic_string_view<char, std::char_traits<char> > &" for 1st argument
      constexpr basic_string_view(const basic_string_view&) noexcept = default;
                ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/string_view:99:17: note: candidate constructor not viable: no known conversion from "cb::char_buffer" (aka "sized_buffer<char>") to "const char *" for 1st argument
      constexpr basic_string_view(const _CharT* __str)
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/xattr/utils.h:50:43: note: passing argument to parameter "payload" here
uint32_t get_body_offset(std::string_view payload);
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:3005:51: error: too few arguments to function call, expected 7, have 6 [clang-diagnostic-error]
                            DocumentState::Deleted));
                                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googletest/include/gtest/gtest.h:2057:54: note: expanded from macro "ASSERT_EQ"
# define ASSERT_EQ(val1, val2) GTEST_ASSERT_EQ(val1, val2)
                                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googletest/include/gtest/gtest.h:2041:69: note: expanded from macro "GTEST_ASSERT_EQ"
  ASSERT_PRED_FORMAT2(::testing::internal::EqHelper::Compare, val1, val2)
                                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googletest/include/gtest/gtest_pred_impl.h:168:40: note: expanded from macro "ASSERT_PRED_FORMAT2"
  GTEST_PRED_FORMAT2_(pred_format, v1, v2, GTEST_FATAL_FAILURE_)
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googletest/include/gtest/gtest_pred_impl.h:149:43: note: expanded from macro "GTEST_PRED_FORMAT2_"
  GTEST_ASSERT_(pred_format(#v1, #v2, v1, v2), \
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googletest/include/gtest/gtest_pred_impl.h:77:52: note: expanded from macro "GTEST_ASSERT_"
  if (const ::testing::AssertionResult gtest_ar = (expression)) \
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.h:157:5: note: "store" declared here
    ENGINE_ERROR_CODE store(
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2542/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/item.cc:479:66:
error: no viable conversion from "cb::char_buffer" (aka "sized_buffer<char>") to "std::string_view" (aka "basic_string_view<char>") [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2542/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24380/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/item.cc:479:66:
error: no viable conversion from "cb::char_buffer" (aka "sized_buffer<char>") to "std::string_view" (aka "basic_string_view<char>")
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24380/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28351/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\item.cc(479): error C2664: "uint32_t cb::xattr::get_body_offset(std::string_view)": cannot convert argument 1 from "cb::char_buffer" to "std::string_view" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28351/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3019/ : FAILURE

Compile error at [2020-06-03T18:16:20.461Z] ../kv_engine/engines/ep/src/item.cc:479:66:
error: no viable conversion from "cb::char_buffer" (aka "sized_buffer<char>") to "std::string_view" (aka "basic_string_view<char>")
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3019/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3956/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3914/ : FAILURE

Compile error at [2020-06-03T18:23:58.271Z] ../kv_engine/engines/ep/src/item.cc:479:72:
error: could not convert ?valBuf? from ?cb::char_buffer {aka cb::sized_buffer<char>}? to ?std::string_view {aka std::basic_string_view<char>}?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3914/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4017/ : FAILURE

Compile error at [2020-06-03T18:18:55.333Z] ../kv_engine/engines/ep/src/item.cc:479:72:
error: could not convert ?valBuf? from ?cb::char_buffer {aka cb::sized_buffer<char>}? to ?std::string_view {aka std::basic_string_view<char>}?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4017/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11794/ : FAILURE

Compile error at [2020-06-03T18:20:30.118Z] ../kv_engine/engines/ep/src/item.cc:479:72:
error: could not convert ?valBuf? from ?cb::char_buffer {aka cb::sized_buffer<char>}? to ?std::string_view {aka std::basic_string_view<char>}?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11794/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1058/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
